# lumbre-playwright-python

./: .gitignore  README.md
test-framework/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
test-framework/automation/: __init__.py
test-framework/automation/adapters/: __init__.py
test-framework/automation/core/: __init__.py  config.py
test-framework/framework/: config.py
test-framework/framework/api/: __init__.py  lumbre_api.py
test-framework/framework/components/: cart_drawer.py  event_reservation_modal.py  events_section.py  header.py  membership_modal.py
test-framework/framework/contracts/: __init__.py  openapi.py
test-framework/framework/pages/: __init__.py  home_page.py
test-framework/framework/reporting/: __init__.py  html_report.py  lumbre_report.css  test_logger.py
test-framework/projects/: README.md  __init__.py
test-framework/projects/lumbre/: __init__.py  conftest.py
test-framework/projects/lumbre/pages/: base_page.py  (+1 more)
test-framework/templates/: component_object_template.py.txt  page_object_template.py.txt  test_api_template.py.txt  test_ui_template.py.txt
test-framework/tests/: conftest.py
test-framework/tests/api/: test_api_004_product_rejects_non_positive_price.py  test_api_006_member_created_with_valid_data.py  test_api_008_ingredient_detail_exposes_research_data.py  test_api_010_hypothesis_deduplicates_ingredient_order.py  test_api_013_new_hypothesis_is_persisted.py  test_api_014_resource_not_found_contracts.py  test_api_014_unknown_hypothesis_returns_not_found.py  test_api_016_unknown_ingredient_returns_not_found.py  test_api_017_products_collection_contract.py  test_api_018_valid_product_is_created.py  test_api_019_events_collection_contract.py  test_api_020_invalid_membership_is_rejected.py
(+253 files in other folders)
