[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-automation-core"
version = "0.2.0"
description = "Reusable Python automation core with Playwright project adapters"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "openapi-spec-validator>=0.7,<1",
  "playwright>=1.49,<2",
  "pytest>=8,<10",
  "pytest-html>=4.1,<5",
  "pytest-playwright>=0.6,<1",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-jsonschema>=4.23,<5",
]

[tool.setuptools.packages.find]
include = ["automation*", "projects*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --tracing=retain-on-failure --screenshot=only-on-failure"
testpaths = ["tests/framework", "projects/lumbre/tests"]
markers = [
  "case(case_id, behavior): test case identity and executable behavior documentation",
  "smoke: fast critical-path coverage",
  "ui: browser-based test",
  "api: direct API test",
  "contract: OpenAPI and JSON Schema contract validation",
  "framework_unit: isolated validation of reusable framework behavior",
  "regression: extended functional coverage",
  "cross_browser: explicit compatibility coverage across Playwright browser engines",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(message)s"
log_cli_date_format = "%H:%M:%S"
generate_report_on_test = true
render_collapsed = ""
environment_table_redact_list = [
  ".*TOKEN.*",
  ".*PASSWORD.*",
  ".*SECRET.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
